# zad

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  OSS_SPEC.md  README.md  SECURITY.md  rust-toolchain.toml
.agent/skills/maintenance/: .last-updated  SKILL.md
.agent/skills/update-docs/: .last-updated  SKILL.md
.agent/skills/update-manpages/: .last-updated  SKILL.md
.agent/skills/update-pages/: SKILL.md
.agent/skills/update-readme/: SKILL.md
.agent/skills/update-website/: SKILL.md
.cargo/: audit.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  configuration.md  getting-started.md  permissions.md  services.md
docs/proposals/: service-permissions-command.md
examples/: discord-permissions.toml
examples/1pass-permissions/: README.md  permissions.toml
examples/discord-permissions/: README.md  permissions.toml
examples/gcal-permissions/: README.md  permissions.toml
examples/github-permissions/: README.md  permissions.toml
examples/telegram-permissions/: README.md  permissions.toml
examples/telegram-setup/: README.md  config.toml
man/: 1pass.md  commands.md  discord.md  docs.md  gcal.md  github.md  main.md  man.md  service.md  status.md  telegram.md
pages/: package-lock.json  package.json
pages/scripts/: build.mjs  extract-source-data.mjs
scripts/: check-agent-symlinks.sh  update-versions.sh
src/: error.rs  lib.rs  logging.rs  main.rs  output.rs
src/adapter/: mod.rs
src/adapter/discord/: client.rs  mod.rs  (+1 more)
src/cli/: adapter.rs  adapter_discord.rs  adapter_list.rs  commands.rs  debug_agent.rs  discord.rs  docs.rs  gcal.rs  github.rs  help_agent.rs  lifecycle.rs  man.rs  mod.rs  onepass.rs  permissions.rs  service.rs  service_discord.rs  service_gcal.rs  service_github.rs  service_list.rs  service_onepass.rs  service_status.rs  service_telegram.rs  status.rs  telegram.rs
src/config/: directory.rs  mod.rs  path.rs  schema.rs
src/permissions/: attachments.rs  content.rs  mod.rs  mutation.rs  pattern.rs  service.rs  signing.rs  staging.rs  time.rs
src/secrets/: mod.rs
src/service/: mod.rs  registry.rs
tests/: cli_adapter_discord_test.rs  cli_discord_directory_test.rs  cli_discord_permissions_test.rs  cli_discord_self_test.rs  cli_discord_send_attachments_test.rs  cli_discord_test.rs  cli_github_permissions_test.rs  cli_github_test.rs  cli_help_agent_test.rs  cli_permissions_staging_test.rs  cli_service_1pass_test.rs  cli_service_discord_test.rs  cli_service_gcal_test.rs  cli_service_github_test.rs  cli_service_status_test.rs  cli_service_telegram_test.rs  cli_status_test.rs  cli_telegram_self_test.rs  cli_telegram_send_attachments_test.rs  cli_telegram_test.rs  config_path_test.rs  config_roundtrip_test.rs  directory_resolver_test.rs  discord_error_mapping_test.rs  examples_smoke_test.rs  gcal_oauth_test.rs  gcal_permissions_test.rs  gcal_time_parse_test.rs  manpage_parity_test.rs  permissions_attachments_test.rs  permissions_content_test.rs  permissions_discord_test.rs  permissions_github_test.rs  permissions_onepass_test.rs  permissions_pattern_test.rs  permissions_signing_test.rs  permissions_staging_test.rs  permissions_telegram_test.rs  permissions_time_test.rs  secrets_roundtrip_test.rs
tests/common/: mod.rs
website/: index.html  package-lock.json  package.json
website/scripts/: build.mjs  extract-source-data.mjs
(+24 files in other folders)
